<resources>
    <string-array name="notifiEntries">
        <item>6h</item>
        <item>12h</item>
        <item>24h</item>

    </string-array>
    <string name="app_name">Memor</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="intro_text">Type the word and its translation below to add it to your list</string>
    <string name="hint_word">Word</string>
    <string name="hint_translation">Translation</string>
    <string name="add_button">Add</string>
    <string name="reminder">Reminder</string>
    <string name="headline1_list">Word</string>
    <string name="headline2_list">Translation</string>
    <string name="Bar1">Add</string>
    <string name="Bar2">My notes</string>
    <string name="Bar3">List of words</string>
    <string name="error_inserting">Some problem has occurred while inserting</string>
    <string name="word_added">One word has been added</string>
    <string name="all_fields_used">All of the fields should be used</string>
    <string name="swipe_to_delete">Swipe left or right to delete from the list</string>
    <string name="swipe_to_browse">Swipe left or right to browse through words. Click on a word to see its translation</string>
    <string name="reminder_button">Reminder</string>
    <string name="remind_me_words">Remind me words    </string>
    <string name="Every">Every</string>
    <string name="notification_title">Do you remember this word?</string>
    <string name="reminder_help">Turn on to get a notification with a random word from your list every few hours</string>
    <string name="notification1">Memor will show you one word every 3h</string>
    <string name="notification2">Memor will show you one word evyery 6h</string>
    <string name="notification3">Memor will show you one word every 12h</string>
    <string name="empty_list">You have no words on your list </string>
    <string name="info">"Memor" created by ynsok and hania91414. Background: Yellow and Grey Abstract Flower Pattern Wallpaper, www.muralswallpaper.co.uk</string>
    <string name="job_running">started</string>
    <string name="job_service">Start</string>



    <string-array name="list_preference_entries">
        <item>3h</item>
        <item>6h</item>
        <item>12h</item>
    </string-array>
<string-array name="list_preference_entry_values">
    <item>10800000</item>
    <item>21600000</item>
    <item>43200000</item>
</string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="switchPreference_Key">show_Notification</string>
    <string name="ListPreference_Key">hours_preferences</string>
    <string name="defould_ListPreference">3h</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="infoMenu">Info</string>
    <string name="Show_Notification_Key">show_notification</string>
    <string name="List_Preference_Key">List_preference</string>


</resources>
