<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_add_word"
                android:layout_width="@dimen/wide_card_width"
                android:layout_height="@dimen/wide_card_height"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:paddingLeft="@dimen/image_padding_left"
                android:paddingTop="@dimen/top_margin_add_word"
                app:srcCompat="@drawable/vector_card_wide" />


            <EditText
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/BarColor"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_word"
                android:inputType="text|textPersonName"
                android:paddingTop="@dimen/add_word_padding"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@drawable/edit_text_cursor_style" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_add_translation"
                android:layout_width="@dimen/wide_card_width"
                android:layout_height="@dimen/wide_card_height"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:paddingLeft="@dimen/image_padding_left"
                app:srcCompat="@drawable/vector_card_wide_dark" />


            <EditText
                android:id="@+id/translate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/BarColor"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_translation"
                android:inputType="textPersonName"
                android:textColorLink="@color/color_link2"
                android:textCursorDrawable="@drawable/edit_text_cursor_style" />

        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/button_margin2"
            android:background="@drawable/button_style1"
            android:onClick="ButtonForTake"
            android:text="@string/add_button"
            android:textColor="@color/button_text_color" />
    </LinearLayout>
</ScrollView>
